--- a/estilo.css
+++ b/estilo.css
@@ -58,6 +58,7 @@ nav {
     color: #2e294e;
     text-decoration: none;
     margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
