--- a/registers/sign_upCONDUCTOR/styles.css
+++ b/registers/sign_upCONDUCTOR/styles.css
@@ -23,13 +23,14 @@ img{
     border-radius: 20px;
     position: relative;
     width: 900px;
-    top: 50px;
+    top: 20px;
 }
 
 .logo img {
     position: relative;
     width: 500px;
-    top: -70px;
+    top: -100px;
+    left: 55px;
 }
 
 .wrapper{
