Mejoras en la estetica

--- a/registers/sign_upCONDUCTOR/styles.css
+++ b/registers/sign_upCONDUCTOR/styles.css
@@ -6,31 +6,40 @@
 }
 
 body{
-    background: #5F799A;
+    background-image: url(mujer_sonriendo_en_auto.jpg);
+    background-size: cover;
     padding: 0 10px;
-}
 
-img{
-    width: 500px;
-    height: auto;
-    margin: auto;
-    position: relative;
-    left: 9%;
-
-}
-
-.container img{
-    border-radius: 20px;
-    position: relative;
-    width: 900px;
-    top: 20px;
 }
 
 .logo img {
-    position: relative;
-    width: 500px;
-    top: -100px;
-    left: 55px;
+    position: fixed;
+    width: 250px;
+    top: 350px;
+    left: 0px;
+}
+
+.triangulo-derecha{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border-width: 20vh 0 25vh 100vw;
+    border-style: solid;
+    border-color: transparent transparent #5F799A transparent ;
+}
+
+.triangulo-izquierda{
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-top: 25vh solid transparent;
+    border-bottom: 50vh solid transparent;
+    border-left: 150vh solid #5F799A;
+    border-right: 50vh;
+    border-color: white transparent transparent transparent ;
+    transform: rotate(180deg);
 }
 
 .wrapper{
