--- a/registers/sign_upCLIENTE/styles.css
+++ b/registers/sign_upCLIENTE/styles.css
@@ -6,26 +6,41 @@
 }
 
 body{
-    background: #5F799A;
+    background-image: url(hombre_sosteniendo_cajas.jpg);
+    background-size: cover;
     padding: 0 10px;
 }
 
-.container img {
-    width: 800px;
-    position: relative;
-    top: -15px;
-    left: 500px;
-    border-radius: 20px;
-}
 
 .logo img {
-    width: 500px;
+    width: 250px;
     position: relative;
-    left: 800px;
-    top: 10px;
+    left: 950px;
+    top: 380px;
+    z-index: 1;
 }
 
-
+.triangulo-derecha {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-width: 20vh 0 25vh 100vw;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent ;
+}
+.triangulo-izquierda {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-top: 25vh solid transparent;
+    border-bottom: 50vh solid transparent;
+    border-left: 150vh solid #5F799A;
+    border-right: 50vh;
+    border-color: #5F799A transparent transparent transparent ;
+    transform: rotate(180deg);
+}
 
 .wrapper{
     max-width: 500px;
@@ -37,7 +52,7 @@ body{
     border-radius: 20px;
     position: absolute;
     top: 5%;
-    left: 20%;
+    left: 10%;
 }
 
 .wrapper .title{
