--- a/registers/sign_upCLIENTE/styles.css
+++ b/registers/sign_upCLIENTE/styles.css
@@ -11,11 +11,17 @@ body{
     padding: 0 10px;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+input[type=number] { -moz-appearance:textfield; }
 
 .logo img {
-    width: 250px;
+    width: 220px;
     position: relative;
-    left: 950px;
+    left: 900px;
     top: 380px;
     z-index: 1;
 }
@@ -35,8 +41,8 @@ body{
     width: 0;
     height: 0;
     border-top: 25vh solid transparent;
-    border-bottom: 50vh solid transparent;
-    border-left: 150vh solid #5F799A;
+    border-bottom: 51vh solid transparent;
+    border-left: 151vh solid #5F799A;
     border-right: 50vh;
     border-color: #5F799A transparent transparent transparent ;
     transform: rotate(180deg);
@@ -44,14 +50,15 @@ body{
 
 .wrapper{
     max-width: 500px;
-    width: 80%;
+    width: 50%;
+    height: 610px;
     background: #fff;
     margin: 20px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
     border-radius: 20px;
     position: absolute;
-    top: 5%;
+    top: 0%;
     left: 10%;
 }
 
