--- a/registers/sign_upCONDUCTOR/styles.css
+++ b/registers/sign_upCONDUCTOR/styles.css
@@ -19,6 +19,12 @@ body{
     left: 0px;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+
 .triangulo-derecha{
     position: fixed;
     bottom: 0;
